<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_weight="1"></ListView>

</LinearLayout>