...
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/searchItemTeleportIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_folder_arrow_right_outline"
            app:layout_constraintBottom_toBottomOf="parent"
...
