...
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/search_view_back_margin_left_right"
            android:layout_marginRight="@dimen/search_view_back_margin_left_right"
            app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
            app:layout_constraintEnd_toStartOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_edit_text"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <androidx.appcompat.widget.AppCompatEditText
...
